objects/OEM_Details__c.object
<CustomObject>
    <description>This object will be used to list Consumer Device OEM details by fiscal month.</description>
    <fields>
        <fullName>Billing__c</fullName>
        <description>USD</description>
        <inlineHelpText>USD</inlineHelpText>
        <label>Billing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Month__c</fullName>
        <formula>CASE(text( Fiscal_Month__c ), &apos;01&apos;, &apos;Oct&apos;, &apos;02&apos;, &apos;Nov&apos;,&apos;03&apos;,&apos;Dec&apos;,&apos;04&apos;,&apos;Jan&apos;,&apos;05&apos;,&apos;Feb&apos;,&apos;06&apos;,&apos;Mar&apos;,&apos;07&apos;,&apos;Apr&apos;,&apos;08&apos;,&apos;May&apos;,&apos;09&apos;,&apos;Jun&apos;,&apos;10&apos;,&apos;Jul&apos;,&apos;11&apos;,&apos;Aug&apos;,&apos;Sep&apos;)</formula>
        <label>Calendar Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Year__c</fullName>
        <formula>IF( (Value(text(Fiscal_Month__c))&lt;4) , text(Value(text( Fiscal_Year__c ))-1),text( Fiscal_Year__c ) )</formula>
        <label>Calendar Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cutoff_Date__c</fullName>
        <description>System will automatic to create a snapshot in cutoff date, the billing of this month will use this snapshot to make refresh.</description>
        <label>Cutoff Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                    <default>true</default>
                    <label>24</label>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Fiscal Year - Fiscal Month - Cutoff Date</description>
        <formula>DATE( VALUE( TEXT( Fiscal_Year__c ) ) ,VALUE( TEXT(  Fiscal_Month__c  ) ),VALUE( TEXT(  Cutoff_Date__c  ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <inlineHelpText>1 = Oct
2 = Nov
3 = Dec
4 = Jan
5 = Feb
6 = Mar
7 = Apr
8 = May
9 = Jun
10 = Jul
11 = Aug
12 = Sep</inlineHelpText>
        <label>Fiscal Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <default>true</default>
                    <label>01</label>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OEM Details</relationshipLabel>
        <relationshipName>OEM_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Parent_Ref__c</fullName>
        <label>Parent Ref</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Backlog__c</fullName>
        <label>Tech_Backlog</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Booking__c</fullName>
        <label>Tech_Booking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_CutoffDate__c</fullName>
        <label>Tech_Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_Latest_SA__c</fullName>
        <label>Tech_Latest_SA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_MTD_Billing__c</fullName>
        <label>Tech_MTD_Billing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OEM Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OEM__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>Fiscal_Month__c</columns>
        <columns>Cutoff_Date__c</columns>
        <columns>Billing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OEMD-{YY}{MM}{DD}#{00000000}</displayFormat>
        <label>OEM Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OEM Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>